--- a/notebooks/CIFAR-10 in PyTorch-Crazy-Architecture-with-batch-norm-sgd-momentum.ipynb
+++ b/notebooks/CIFAR-10 in PyTorch-Crazy-Architecture-with-batch-norm-sgd-momentum.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -197,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "RuntimeError",
@@ -822,7 +826,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.5.2",
    "language": "python",
    "name": "python3"
   },
